app/modules/stats/css/index-compliant.css
td {
    margin: 0;
    border: 0;
    padding: 0;
    vertical-align: center;
    position: relative;
}
table.columns {
    padding-top: 5px;
}
table.columns td {
    padding: 0;
    margin: 0;
    text-align: center;
    font-size: 11px;
}
table.twelve td {
    width: 7%;
    padding-right: 1px;
}

.datarow {
    height: 18px;
    width: 100px;
    background-color: #eee;
    -webkit-border-radius: 3px; 
    margin: 0 2px 4px 2px;
}
.rowbar {
    height: 18px;
    width: 0;
    background: #6499cb url(../../Webkit/images/rowbar.png) repeat-x;
    background-position: top left;
    border: none;
    -webkit-border-radius: 2px; 
}

.datacol {
    position: relative;
    width: 100%;
    height: 100px;
    background-color: #eee;
    -webkit-border-radius: 3px; 
}

.colbar {
    position: absolute;
    z-index: 10;
    opacity: 1;
    bottom: 0;
    width: 100%;
    height: 0;
    background: #6499cb url(../../Webkit/images/colbar.png) repeat-y;
    background-position: bottom left;
    border: none;
    -webkit-border-radius: 2px; 
}

.collabel {
    margin-top: -13px;
    font-size: 10px;
    width: 120%;
    margin-left: -10%;
    color: #000;
}

